Add company sites and enforce site selection

--- a/index.html
+++ b/index.html
@@ -682,8 +682,8 @@
               </select>
             </div>
             <div>
-              <label for="scope1-region">Facility region (optional)</label>
-              <select id="scope1-region">
+              <label for="scope1-region">Facility region</label>
+              <select id="scope1-region" required>
                 <option value="">Select region</option>
               </select>
             </div>
@@ -827,9 +827,9 @@
               </select>
             </div>
             <div>
-              <label for="signup-company-region">State / region (optional)</label>
-              <select id="signup-company-region">
-                <option value="">Select state / province (optional)</option>
+              <label for="signup-company-region">State / region</label>
+              <select id="signup-company-region" required>
+                <option value="">Select state / province</option>
               </select>
             </div>
           </div>
@@ -881,8 +881,8 @@
               </select>
             </div>
             <div>
-              <label for="company-region">Region / state (optional)</label>
-              <input type="text" id="company-region" placeholder="e.g., California" />
+              <label for="company-region">Region / state</label>
+              <input type="text" id="company-region" required placeholder="e.g., California" />
             </div>
           </div>
           <div class="modal-actions">
