--- a/records.html
+++ b/records.html
@@ -481,6 +481,7 @@
   <script type="module" src="./js/records.js"></script>
   <script type="module">
     import { EMISSION_FACTORS, GLOBAL_FALLBACK } from './data/emission-factors.js';
+    import { ensureCompanySites } from './js/sites.js';
     const recordsTable = document.getElementById('recordsTable');
     const recordPanel = document.getElementById('recordPanel');
     const signoutBtn = document.getElementById('nav-signout');
@@ -488,6 +489,8 @@
     const exportStatus = document.getElementById('records-export-status');
     const addBtn = document.getElementById('records-add');
     const bulkBtn = document.getElementById('records-bulk');
+    let sites = [];
+    let hqSite = null;
     const authNote = document.getElementById('records-auth-note');
     const SUPABASE_URL = window.SUPABASE_URL || 'https://yyzyyjxmoggrmqsgrlxc.supabase.co';
     const SUPABASE_ANON_KEY = window.SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl5enl5anhtb2dncm1xc2dybHhjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYxMTQ4MzMsImV4cCI6MjA4MTY5MDgzM30.BhnHmz9ADB52B_VcMdzvdyFiPvZFj_Q-jfjRqeAoQM4';
@@ -555,9 +558,19 @@
       });
     };
 
+    const getSiteCountries = () => {
+      const unique = Array.from(new Set(sites.map((site) => site.country)));
+      return unique.map((country) => {
+        const label = (COUNTRY_OPTIONS.find((c) => c.value === country) || {}).label || country;
+        return { value: country, label };
+      });
+    };
+
     const populateCountries = (el) => {
+      if (!el) return;
+      const options = sites.length ? getSiteCountries() : COUNTRY_OPTIONS;
       el.innerHTML = '<option value="">Select country</option>';
-      COUNTRY_OPTIONS.forEach((c) => {
+      options.forEach((c) => {
         const opt = document.createElement('option');
         opt.value = c.value;
         opt.textContent = c.label;
@@ -566,7 +579,10 @@
     };
 
     const setRegionOptions = (country, regionEl) => {
-      const opts = REGION_OPTIONS[country] || [];
+      if (!regionEl) return;
+      const opts = sites.length
+        ? sites.filter((site) => site.country === country).map((site) => site.region)
+        : (REGION_OPTIONS[country] || []);
       regionEl.innerHTML = '<option value="">Select region</option>';
       opts.forEach((name) => {
         const opt = document.createElement('option');
@@ -632,7 +648,7 @@
       if (authNote) authNote.hidden = true;
       const { data, error } = await supabase
         .from('scope2_records')
-        .select('id,period_year,period_month,kwh,location_based_emissions,market_based_emissions,emission_factor_source,emission_factor_year,emission_factor_value,calc_country,calc_region,market_instrument_type,covered_kwh,companies(company_name,country,region)')
+        .select('id,site_id,period_year,period_month,kwh,location_based_emissions,market_based_emissions,emission_factor_source,emission_factor_year,emission_factor_value,calc_country,calc_region,market_instrument_type,covered_kwh,companies(company_name,country,region)')
         .order('period_year', { ascending: false })
         .order('period_month', { ascending: false })
         .order('created_at', { ascending: false });
@@ -688,20 +704,30 @@
       return data?.[0]?.id || null;
     };
 
-    const loadCompanyPreference = async () => {
+    const applySiteRestrictions = () => {
+      const hasSites = sites.length > 0;
+      if (addBtn) addBtn.disabled = !hasSites;
+      if (bulkBtn) bulkBtn.disabled = !hasSites;
+    };
+
+    const loadCompanyPreference = async (session) => {
       if (!supabase) return;
       const { data, error } = await supabase
         .from('companies')
-        .select('reporting_year_preference,country,region')
+        .select('reporting_year_preference')
         .order('created_at', { ascending: true })
         .limit(1);
       if (error || !data || !data.length) return;
       const company = data[0] || {};
       window.companyReportingPreference = company.reporting_year_preference || 'all';
+      const siteData = await ensureCompanySites(supabase, session);
+      sites = siteData.sites || [];
+      hqSite = siteData.hqSite || null;
       window.companyDefaults = {
-        country: company.country || '',
-        region: company.region || ''
+        country: hqSite?.country || '',
+        region: hqSite?.region || ''
       };
+      applySiteRestrictions();
     };
 
     const isFuturePeriod = (year, month) => (
@@ -875,6 +901,13 @@
         return;
       }
 
+      if (!sites.length) {
+        const statusEl = recordPanel?.querySelector('#add-status');
+        if (statusEl) statusEl.textContent = 'Add at least one site in Settings before creating records.';
+        form.querySelector('button[type="submit"]').disabled = true;
+        return;
+      }
+
       populateCountries(countryEl);
       populateMonths(monthEl);
       populateYears(yearEl);
@@ -920,6 +953,11 @@
           setStatus('Please complete all required fields.');
           return;
         }
+        const site = sites.find((entry) => entry.country === country && entry.region === region);
+        if (!site) {
+          setStatus('Select a configured site.');
+          return;
+        }
         if (isFuturePeriod(year, month)) {
           setStatus('Future billing periods are not allowed.');
           return;
@@ -959,6 +997,7 @@
           const payload = {
             user_id: session.user.id,
             company_id: companyId,
+            site_id: site.id,
             period_year: year,
             period_month: month,
             kwh,
@@ -1089,6 +1128,12 @@
       const statusEl = recordPanel?.querySelector('#bulk-status');
       if (!rowsEl || !addRowBtn || !form) return;
 
+      if (!sites.length) {
+        if (statusEl) statusEl.textContent = 'Add at least one site in Settings before creating records.';
+        form.querySelector('button[type="submit"]').disabled = true;
+        return;
+      }
+
       for (let i = 0; i < 3; i += 1) {
         rowsEl.appendChild(createBulkRow());
       }
@@ -1140,6 +1185,11 @@
             errors.push(`Row ${idx + 1}: complete country, region, month, year, and kWh.`);
             return;
           }
+          const site = sites.find((entry) => entry.country === country && entry.region === region);
+          if (!site) {
+            errors.push(`Row ${idx + 1}: select a configured site.`);
+            return;
+          }
           if (isFuturePeriod(year, month)) {
             errors.push(`Row ${idx + 1}: future billing periods are not allowed.`);
             return;
@@ -1170,6 +1220,7 @@
           payloads.push({
             user_id: session.user.id,
             company_id: companyId,
+            site_id: site.id,
             period_year: year,
             period_month: month,
             kwh,
@@ -1320,18 +1371,24 @@
       await initSupabase();
       if (supabase) {
         await refreshRecords();
-        await loadCompanyPreference();
+        const session = await getSession();
+        if (session) await loadCompanyPreference(session);
         if (window.renderRecords) window.renderRecords('recordsTable');
         if (window.renderCarbonSummary) window.renderCarbonSummary();
         if (window.renderCarbonReminders) window.renderCarbonReminders();
-        supabase.auth.onAuthStateChange((_event) => {
+        supabase.auth.onAuthStateChange(async (_event, session) => {
           if (_event === 'SIGNED_IN' || _event === 'TOKEN_REFRESHED' || _event === 'SIGNED_OUT') {
-            refreshRecords();
-            loadCompanyPreference().then(() => {
-              if (window.renderRecords) window.renderRecords('recordsTable');
-              if (window.renderCarbonSummary) window.renderCarbonSummary();
-              if (window.renderCarbonReminders) window.renderCarbonReminders();
-            });
+            await refreshRecords();
+            if (session) {
+              await loadCompanyPreference(session);
+            } else {
+              sites = [];
+              hqSite = null;
+              applySiteRestrictions();
+            }
+            if (window.renderRecords) window.renderRecords('recordsTable');
+            if (window.renderCarbonSummary) window.renderCarbonSummary();
+            if (window.renderCarbonReminders) window.renderCarbonReminders();
           }
         });
       } else {
