--- a/settings.html
+++ b/settings.html
@@ -55,9 +55,17 @@
     input, select { width: 100%; padding: 10px; border-radius: 10px; border: 1px solid var(--line); font-size: 1rem; background: #fff; }
     .btn { display: inline-flex; align-items: center; justify-content: center; padding: 12px 14px; border-radius: 12px; border: 1px solid transparent; font-weight: 700; text-decoration: none; cursor: pointer; color: inherit; }
     .btn.primary { background: #22c55e; color: #0f172a; }
+    .btn.secondary { background: #f8fafc; border-color: #cbd5e1; color: #0f172a; }
     .actions { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
     .status { font-size: 0.95rem; color: var(--muted); min-height: 20px; }
     .note { font-size: 0.9rem; color: var(--muted); }
+    .site-list { display: grid; gap: 10px; }
+    .site-row { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 10px 12px; border: 1px solid var(--line); border-radius: 12px; background: #f8fafc; }
+    .site-label { font-weight: 700; }
+    .site-meta { font-size: 0.9rem; color: var(--muted); }
+    .site-actions { display: flex; gap: 8px; align-items: center; }
+    .site-hq { display: inline-flex; align-items: center; gap: 6px; font-weight: 600; }
+    .site-hq input { width: auto; }
     .app-footer { text-align: center; padding: 16px 0 24px; font-size: 0.95rem; color: var(--muted); }
 
     @media (max-width: 980px) {
@@ -117,16 +125,6 @@
               <label for="company-name">Company name</label>
               <input type="text" id="company-name" required placeholder="Acme Co." />
             </div>
-            <div class="row">
-              <div>
-                <label for="company-country">Country / region</label>
-                <select id="company-country" required></select>
-              </div>
-              <div>
-                <label for="company-region">State / region (optional)</label>
-                <select id="company-region"></select>
-              </div>
-            </div>
             <div>
               <label for="company-reporting-year">Reporting year preference</label>
               <select id="company-reporting-year">
@@ -141,6 +139,30 @@
               <span class="status" id="settings-status"></span>
             </div>
           </form>
+        </section>
+
+        <section class="card stack">
+          <div>
+            <h2>Sites</h2>
+            <p class="muted">Add every site where electricity or fuel data is captured. Exactly one site must be marked HQ.</p>
+          </div>
+          <form id="site-add-form" class="stack">
+            <div class="row">
+              <div>
+                <label for="site-country">Country / region</label>
+                <select id="site-country" required></select>
+              </div>
+              <div>
+                <label for="site-region">State / region</label>
+                <select id="site-region" required></select>
+              </div>
+            </div>
+            <div class="actions">
+              <button class="btn secondary" type="submit">Add site</button>
+              <span class="status" id="sites-status"></span>
+            </div>
+          </form>
+          <div class="site-list" id="sites-list"></div>
         </section>
       </div>
       <footer class="app-footer">
@@ -168,6 +190,7 @@
 
   <script type="module">
     import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+    import { ensureCompanySites, buildSiteLabel } from './js/sites.js';
 
     const SUPABASE_URL = window.SUPABASE_URL || 'https://yyzyyjxmoggrmqsgrlxc.supabase.co';
     const SUPABASE_ANON_KEY = window.SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl5enl5anhtb2dncm1xc2dybHhjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYxMTQ4MzMsImV4cCI6MjA4MTY5MDgzM30.BhnHmz9ADB52B_VcMdzvdyFiPvZFj_Q-jfjRqeAoQM4';
@@ -212,37 +235,44 @@
 
     const form = document.getElementById('company-form');
     const nameEl = document.getElementById('company-name');
-    const countryEl = document.getElementById('company-country');
-    const regionEl = document.getElementById('company-region');
     const reportingEl = document.getElementById('company-reporting-year');
     const statusEl = document.getElementById('settings-status');
+    const siteForm = document.getElementById('site-add-form');
+    const siteCountry = document.getElementById('site-country');
+    const siteRegion = document.getElementById('site-region');
+    const sitesList = document.getElementById('sites-list');
+    const sitesStatus = document.getElementById('sites-status');
     const signoutBtn = document.getElementById('nav-signout');
 
     let companyId = null;
     let session = null;
+    let sites = [];
 
     const setStatus = (msg) => { if (statusEl) statusEl.textContent = msg; };
+    const setSitesStatus = (msg) => { if (sitesStatus) sitesStatus.textContent = msg || ''; };
 
-    const populateCountries = () => {
-      countryEl.innerHTML = '<option value="">Select country</option>';
+    const populateCountries = (el) => {
+      if (!el) return;
+      el.innerHTML = '<option value="">Select country</option>';
       COUNTRY_OPTIONS.forEach((c) => {
         const opt = document.createElement('option');
         opt.value = c.value;
         opt.textContent = c.label;
-        countryEl.appendChild(opt);
+        el.appendChild(opt);
       });
     };
 
-    const setRegionOptions = (country, selected = '') => {
+    const setRegionOptions = (country, el, selected = '') => {
+      if (!el) return;
       const opts = REGION_OPTIONS[country] || [];
-      regionEl.innerHTML = '<option value="">Select region</option>';
+      el.innerHTML = '<option value="">Select region</option>';
       opts.forEach((name) => {
         const opt = document.createElement('option');
         opt.value = name;
         opt.textContent = name;
-        regionEl.appendChild(opt);
+        el.appendChild(opt);
       });
-      if (selected) regionEl.value = selected;
+      if (selected) el.value = selected;
     };
 
     const requireAuth = async () => {
@@ -257,17 +287,121 @@
     const loadCompany = async () => {
       const { data, error } = await supabase
         .from('companies')
-        .select('id,company_name,country,region,reporting_year_preference')
+        .select('id,company_name,reporting_year_preference')
         .order('created_at', { ascending: true })
         .limit(1);
       if (error || !data || !data.length) return;
       const company = data[0];
       companyId = company.id;
       nameEl.value = company.company_name || '';
-      countryEl.value = company.country || '';
-      setRegionOptions(company.country, company.region || '');
       if (reportingEl) {
         reportingEl.value = company.reporting_year_preference || 'all';
+      }
+    };
+
+    const renderSites = () => {
+      if (!sitesList) return;
+      sitesList.innerHTML = '';
+      if (!sites.length) {
+        const empty = document.createElement('div');
+        empty.className = 'note';
+        empty.textContent = 'No sites yet. Add at least one site and mark your HQ.';
+        sitesList.appendChild(empty);
+        return;
+      }
+      sites.forEach((site) => {
+        const row = document.createElement('div');
+        row.className = 'site-row';
+        const label = document.createElement('div');
+        label.innerHTML = `<div class="site-label">${buildSiteLabel(site)}</div>`;
+        const meta = document.createElement('div');
+        meta.className = 'site-meta';
+        meta.textContent = site.is_hq ? 'Headquarters' : 'Site';
+        label.appendChild(meta);
+        const actions = document.createElement('div');
+        actions.className = 'site-actions';
+        const hqToggle = document.createElement('label');
+        hqToggle.className = 'site-hq';
+        const radio = document.createElement('input');
+        radio.type = 'radio';
+        radio.name = 'hq-site';
+        radio.checked = site.is_hq;
+        radio.addEventListener('change', () => setHqSite(site));
+        hqToggle.appendChild(radio);
+        hqToggle.appendChild(document.createTextNode('HQ'));
+        const removeBtn = document.createElement('button');
+        removeBtn.type = 'button';
+        removeBtn.className = 'btn secondary';
+        removeBtn.textContent = 'Remove';
+        removeBtn.addEventListener('click', () => removeSite(site));
+        actions.appendChild(hqToggle);
+        actions.appendChild(removeBtn);
+        row.appendChild(label);
+        row.appendChild(actions);
+        sitesList.appendChild(row);
+      });
+    };
+
+    const setHqSite = async (site) => {
+      if (!companyId || !site) return;
+      setSitesStatus('Updating HQ…');
+      try {
+        await supabase
+          .from('company_sites')
+          .update({ is_hq: false })
+          .eq('company_id', companyId)
+          .neq('id', site.id);
+        const { error } = await supabase
+          .from('company_sites')
+          .update({ is_hq: true })
+          .eq('id', site.id);
+        if (error) throw error;
+        await supabase
+          .from('companies')
+          .update({ country: site.country, region: site.region })
+          .eq('id', companyId);
+        sites = sites.map((row) => ({ ...row, is_hq: row.id === site.id }));
+        setSitesStatus('HQ updated.');
+        renderSites();
+      } catch (err) {
+        console.warn('HQ update failed', err);
+        setSitesStatus('Could not update HQ. Please try again.');
+      }
+    };
+
+    const canRemoveSite = async (siteId) => {
+      const { count: scope2Count } = await supabase
+        .from('scope2_records')
+        .select('id', { count: 'exact', head: true })
+        .eq('site_id', siteId);
+      const { count: scope1Count } = await supabase
+        .from('scope1_records')
+        .select('id', { count: 'exact', head: true })
+        .eq('site_id', siteId);
+      return (scope1Count || 0) + (scope2Count || 0) === 0;
+    };
+
+    const removeSite = async (site) => {
+      if (!site || !companyId) return;
+      setSitesStatus('');
+      if (site.is_hq) {
+        setSitesStatus('Select a different HQ before removing this site.');
+        return;
+      }
+      const okToRemove = await canRemoveSite(site.id);
+      if (!okToRemove) {
+        setSitesStatus('Cannot remove a site with linked records. Reassign records first.');
+        return;
+      }
+      try {
+        const { error } = await supabase.from('company_sites').delete().eq('id', site.id);
+        if (error) throw error;
+        sites = sites.filter((row) => row.id !== site.id);
+        setSitesStatus('Site removed.');
+        renderSites();
+      } catch (err) {
+        console.warn('Site removal failed', err);
+        setSitesStatus('Could not remove site.');
       }
     };
 
@@ -279,18 +413,14 @@
         return;
       }
       const name = nameEl.value.trim();
-      const country = countryEl.value;
-      const region = regionEl.value.trim() || null;
       const reportingPref = reportingEl ? reportingEl.value : 'all';
-      if (!name || !country) {
-        setStatus('Company name and country are required.');
+      if (!name) {
+        setStatus('Company name is required.');
         return;
       }
       const payload = {
         user_id: session.user.id,
         company_name: name,
-        country,
-        region,
         reporting_year_preference: reportingPref || 'all'
       };
       try {
@@ -303,19 +433,76 @@
           companyId = data?.id || null;
         }
         setStatus('Saved.');
+        if (!sites.length) {
+          const siteData = await ensureCompanySites(supabase, session);
+          companyId = siteData.companyId || companyId;
+          sites = siteData.sites || [];
+          renderSites();
+        }
       } catch (err) {
         console.warn('Settings save failed', err);
         setStatus('Save failed. Please try again.');
       }
     });
 
+    siteForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      setSitesStatus('');
+      if (!session || !companyId) {
+        setSitesStatus('Save your company details before adding sites.');
+        return;
+      }
+      const country = siteCountry.value;
+      const region = siteRegion.value;
+      if (!country || !region) {
+        setSitesStatus('Country and region are required.');
+        return;
+      }
+      if (sites.some((site) => site.country === country && site.region === region)) {
+        setSitesStatus('That site already exists.');
+        return;
+      }
+      const needsHq = !sites.some((site) => site.is_hq);
+      try {
+        const { data, error } = await supabase
+          .from('company_sites')
+          .insert({
+            company_id: companyId,
+            country,
+            region,
+            is_hq: needsHq
+          })
+          .select('id,country,region,is_hq')
+          .single();
+        if (error) throw error;
+        sites = [...sites, data];
+        if (needsHq) {
+          await supabase
+            .from('companies')
+            .update({ country: data.country, region: data.region })
+            .eq('id', companyId);
+        }
+        siteCountry.value = '';
+        setRegionOptions('', siteRegion);
+        setSitesStatus(needsHq ? 'Site added and set as HQ.' : 'Site added.');
+        renderSites();
+      } catch (err) {
+        console.warn('Site add failed', err);
+        setSitesStatus('Could not add site.');
+      }
+    });
+
     (async () => {
-      populateCountries();
-      setRegionOptions('');
+      populateCountries(siteCountry);
+      setRegionOptions('', siteRegion);
       session = await requireAuth();
       if (!session) return;
       await loadCompany();
-      countryEl.addEventListener('change', () => setRegionOptions(countryEl.value));
+      const siteData = await ensureCompanySites(supabase, session);
+      companyId = siteData.companyId || companyId;
+      sites = siteData.sites || [];
+      renderSites();
+      siteCountry.addEventListener('change', () => setRegionOptions(siteCountry.value, siteRegion));
     })();
 
     if (signoutBtn) {
