Disable non-site locations and align settings styling

--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
               <option value="">Select state / province</option>
             </select>
             <div class="hint">Choose your state (US) or province/territory (Canada). Used only to contextualize results.</div>
+            <div class="hint">Logged-in locations not in Settings are disabled. Update Sites in Settings to enable them.</div>
           </div>
         </div>
         <div class="notice">
@@ -686,6 +687,7 @@
               <select id="scope1-region" required>
                 <option value="">Select region</option>
               </select>
+              <div class="hint">Logged-in locations not in Settings are disabled. Update Sites in Settings to enable them.</div>
             </div>
           </div>
           <div class="two-col">
