--- a/records.html
+++ b/records.html
@@ -566,9 +566,23 @@
       });
     };
 
+    const setDisabledOptions = (el, enabledValues) => {
+      if (!el) return;
+      Array.from(el.options).forEach((opt) => {
+        if (!opt.value) return;
+        opt.disabled = !enabledValues.has(opt.value);
+      });
+    };
+
+    const selectFirstEnabled = (el) => {
+      if (!el) return;
+      const enabled = Array.from(el.options).find((opt) => opt.value && !opt.disabled);
+      if (enabled) el.value = enabled.value;
+    };
+
     const populateCountries = (el) => {
       if (!el) return;
-      const options = sites.length ? getSiteCountries() : COUNTRY_OPTIONS;
+      const options = COUNTRY_OPTIONS;
       el.innerHTML = '<option value="">Select country</option>';
       options.forEach((c) => {
         const opt = document.createElement('option');
@@ -576,13 +590,18 @@
         opt.textContent = c.label;
         el.appendChild(opt);
       });
+      if (sites.length) {
+        const enabled = new Set(getSiteCountries().map((c) => c.value));
+        setDisabledOptions(el, enabled);
+        if (el.value && !enabled.has(el.value)) selectFirstEnabled(el);
+      } else if (sites.length === 0) {
+        setDisabledOptions(el, new Set());
+      }
     };
 
     const setRegionOptions = (country, regionEl) => {
       if (!regionEl) return;
-      const opts = sites.length
-        ? sites.filter((site) => site.country === country).map((site) => site.region)
-        : (REGION_OPTIONS[country] || []);
+      const opts = REGION_OPTIONS[country] || [];
       regionEl.innerHTML = '<option value="">Select region</option>';
       opts.forEach((name) => {
         const opt = document.createElement('option');
@@ -590,6 +609,15 @@
         opt.textContent = name;
         regionEl.appendChild(opt);
       });
+      if (sites.length) {
+        const enabled = new Set(
+          sites.filter((site) => site.country === country).map((site) => site.region)
+        );
+        setDisabledOptions(regionEl, enabled);
+        if (regionEl.value && !enabled.has(regionEl.value)) selectFirstEnabled(regionEl);
+      } else if (sites.length === 0) {
+        setDisabledOptions(regionEl, new Set());
+      }
     };
 
     const selectFinalFactor = (records, billingYear) => {
@@ -844,7 +872,7 @@
             <select id="add-year" required></select>
           </label>
         </div>
-        <div class="panel-hint">Enter the month electricity was consumed, not when the bill was paid.</div>
+        <div class="panel-hint">Enter the month electricity was consumed, not when the bill was paid. Locations not in Settings are disabled.</div>
         <div class="panel-row single">
           <label>
             Electricity (kWh)
@@ -905,7 +933,6 @@
         const statusEl = recordPanel?.querySelector('#add-status');
         if (statusEl) statusEl.textContent = 'Add at least one site in Settings before creating records.';
         form.querySelector('button[type="submit"]').disabled = true;
-        return;
       }
 
       populateCountries(countryEl);
@@ -1036,7 +1063,7 @@
         </div>
         <button type="button" class="btn secondary" data-close-panel style="padding:8px 10px;">×</button>
       </div>
-      <div class="panel-hint">Enter the month electricity was consumed, not when the bill was paid.</div>
+      <div class="panel-hint">Enter the month electricity was consumed, not when the bill was paid. Locations not in Settings are disabled.</div>
       <form id="bulk-form" class="panel-form">
         <div id="bulk-rows"></div>
         <div class="panel-actions">
@@ -1131,7 +1158,6 @@
       if (!sites.length) {
         if (statusEl) statusEl.textContent = 'Add at least one site in Settings before creating records.';
         form.querySelector('button[type="submit"]').disabled = true;
-        return;
       }
 
       for (let i = 0; i < 3; i += 1) {
