--- a/scope1.html
+++ b/scope1.html
@@ -295,6 +295,7 @@
     <aside class="side-nav">
       <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
+        <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
         <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
         <a href="scope1.html" class="nav-item active" data-nav="scope1">Scope 1 Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
