Add Scope 1 results placeholder

--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
             <button type="button" class="btn primary" id="scope1-save" disabled>Save Scope 1 record</button>
           </div>
         </section>
+        <div id="scope1-placeholder" class="muted" style="margin-top:10px;">Your Scope 1 results will appear here after you calculate.</div>
       </div>
     </section>
       </div>
