--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <h2>How CarbonWise works</h2>
       <div class="grid-3">
         <div>
-          <strong>1) You enter Scope 1 or Scope 2 activity data</strong>
+          <strong>1) You enter Scope 1, Scope 2, or Scope 3 data</strong>
           <p class="muted">Natural gas quantity or electricity kWh, plus billing month and location.</p>
         </div>
         <div>
@@ -452,7 +452,7 @@
 
     <section id="calculator">
       <h2>Calculate your monthly emissions</h2>
-      <p class="muted" style="margin-bottom:8px;">Choose Scope 1 or Scope 2, then enter your monthly activity data.</p>
+      <p class="muted" style="margin-bottom:8px;">Choose Scope 1 or Scope 2 here; Scope 3 screening lives in the app.</p>
       <div class="tab-header">
         <button type="button" class="tab-button active" data-tab-target="scope2">Scope 2 electricity</button>
         <button type="button" class="tab-button" data-tab-target="scope1">Scope 1 natural gas</button>
@@ -758,7 +758,7 @@
       <h2>Privacy & trust</h2>
       <ul>
         <li>No uploads. We never ask for bills or PDFs.</li>
-        <li>Calculate without an account. Log in only to save Scope 1 or Scope 2 records.</li>
+        <li>Calculate without an account. Log in only to save Scope 1, Scope 2, or Scope 3 records.</li>
         <li>We only store what you save to your account. No extra personal data.</li>
         <li>Scope 2 electricity factors from EPA / DEFRA — transparent and explainable.</li>
         <li>Scope 1 natural gas factors from public government sources — transparent and explainable.</li>
